💄 Adding rich text elements style and fixing block spacing

--- a/themes/mvhypnosereiki-theme/sass/pages/_home.scss
+++ b/themes/mvhypnosereiki-theme/sass/pages/_home.scss
@@ -22,7 +22,7 @@ body {
   }
  
   &__title {
-    font-size: min(8vw, 3rem);
+    font-size: min(8vw, 2.5rem);
     margin-bottom: .5rem;
 
     @media (max-width: $xl) {
@@ -287,7 +287,7 @@ body {
 }
 
 .pricing {
-  padding: 10rem 0;
+  padding: 6rem 0;
   background-color: $background;
   color: $secondary;
   font-family: Junge;
@@ -429,7 +429,7 @@ body {
 .news {
   background-color: $background;
   color: $secondary;
-  padding: 10rem 0;
+  padding: 6rem 0;
 
   &-container {
     display: flex;
