--- a/themes/mvhypnosereiki-theme/sass/pages/_single.scss
+++ b/themes/mvhypnosereiki-theme/sass/pages/_single.scss
@@ -7,6 +7,14 @@
   h2 {
     font-size: 1.5rem;
     color: $primary;
+    margin-top: 2rem;
+    margin-bottom: .5rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+    color: $secondary;
+    margin-top: 2rem;
     margin-bottom: .5rem;
   }
 
@@ -21,5 +29,9 @@
     margin-bottom: 1rem;
     color: $secondary;
     list-style: inside;
+  }
+
+  a {
+    color: $primary;
   }
 }
